# Memory-CL

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  README.md  RUNBOOK.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.lock.txt
core/: __init__.py  config.py  config_runtime.py  logging.py  token_cache.py
docs/: 00_INDEX.md  01_OVERVIEW.md  02_ARCHITECTURE.md  03_DATA_FLOW.md  04_INSTALLATION.md  05_LOCAL_DEVELOPMENT.md  06_CONFIGURATION.md  07_API_REFERENCE.md  08_MCP_TOOLING.md  09_RETRIEVAL_SYSTEM.md  10_RANKING_ENGINE.md  11_GRAPH_SYSTEM.md  12_EMBEDDINGS_AND_COMPRESSION.md  13_MEMORY_EVOLUTION.md  14_DISTRIBUTED_SYSTEM.md  15_OBSERVABILITY.md  16_AUDIT_AND_GOVERNANCE.md  17_SNAPSHOT_AND_REPLAY.md  18_UI_GUIDE.md  19_CLI_REFERENCE.md  20_SDK_GUIDE.md  21_DEPLOYMENT.md  22_SECURITY_AND_ACCESS_CONTROL.md  23_PERFORMANCE_AND_SCALING.md  24_TROUBLESHOOTING.md  25_DESIGN_DECISIONS.md  26_GLOSSARY.md  27_FEATURE_MATRIX.md  MCP_BRIDGE.md  MCP_SERVER.md  PHASE_9_DEPLOYMENT.md
infra/: __init__.py
schemas/: __init__.py  auth.py  auth_providers.py  base.py  compression.py  dense.py  graph.py  health.py  ingest.py  orgs.py  retrieval.py
scripts/: boot.sh  mcp_bridge.py
sdk/: __init__.py  client.py  types.py
storage/: __init__.py  api_token_repo.py  app_config_repo.py  auth_provider_repo.py  base.py  federated_identity_repo.py  invitation_repo.py  membership_repo.py  neo4j.py  neo4j_repo.py  org_repo.py  postgres.py  postgres_repo.py  qdrant.py  qdrant_repo.py  redis.py  repo_grant_repo.py  repo_registry_repo.py  repositories.py  session_repo.py  team_repo.py  user_repo.py
tests/: conftest.py  test_api_token_repo.py  test_app_config_repo.py  test_app_state.py  test_auth_deps.py  test_auth_enforcement.py  test_auth_lifespan_wiring.py  test_auth_passwords.py  test_auth_principal.py  test_auth_provider_repo.py  test_auth_providers_admin.py  test_auth_providers_presets.py  test_auth_router.py  test_auth_runtime_config.py  test_auth_settings.py  test_compression.py  test_compression_pipeline.py  test_config.py  (+97 more)
(+322 files in other folders)
