[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-cl"
version = "0.1.0"
description = "AI-native project memory system (Phase 1: foundation)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Memory-CL" }]

dependencies = [
  # API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # Settings & validation
  "pydantic>=2.7",
  "pydantic-settings>=2.4",

  # Storage clients
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "qdrant-client>=1.10",
  "neo4j>=5.22",
  "redis>=5.0",

  # Repo walking
  "pathspec>=0.12",

  # Parsing (multi-language ingestion)
  "tree-sitter==0.25.2",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "tree-sitter-c-sharp==0.23.5",
  "tree-sitter-go==0.25.0",
  "tree-sitter-java==0.23.5",
  "tree-sitter-rust==0.24.2",

  # Observability
  "structlog>=24.1",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27",

  # Native MCP server — official protocol SDK + SSE transport helper.
  "mcp>=1.10",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*", "storage*", "schemas*", "infra*", "sdk*"]

[project.scripts]
memcl = "apps.cli.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "-ra",
]
markers = [
  "integration: requires running infrastructure (postgres, qdrant, neo4j, redis)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
